# C-basics

./: CMakeLists.txt  README.md  calculator.c  pyramid.c  temperatures.c
1-intro/: CMakeLists.txt  fibonacci-recursion.c  pyramid.c
2-stdio-strings/: download-time.c
3-operators/: calculator.c
6-arrays/: main.c
6-arrays/utils/: sorting.c  sorting.h
X-O-game/: main.c
X-O-game/utils/: grid.c  grid.h
sorting/utils/: sorting.h
